# kernel

./: .gitignore  CMakeLists.txt  Toolchain.cmake  build.sh  clean.sh  fullbuild.sh  gen.sh  kernel.ld  run.sh  things-to-consider-for-multicore
include/acpi/: format.h  table.h
include/algorithm/: bit_field.h  double_linked_list.h  linked_list.h  quicksort.h  rb_tree.h  xor_linked_list.h
include/asm/: control.h  cpuid.h  io.h  random.h  registers.h
include/boot/: bootinfo.h
include/cpu/: control.h  core.h  features.h  register_id.h  state.h
include/efi/: memory.h  table.h
include/gcc/: interrupt.h  utils.h
include/graphics/: framebuffer.h  glyph.h  print.h
include/interrupt/: apic.h  idt.h  pic.h
include/memory/: buddy_allocator.h  efi_memory.h  manipulate.h  memory_map.h  page_allocator.h  simple_allocator.h
include/paging/: control.h  format.h  paging.h  state.h
include/ps2/: controller.h  keyboard.h
include/segment/: format.h  gdt.h  tss.h
include/sync/: spinlock.h
src/: entry.s  main.c
src/acpi/: table.c
src/algorithm/: double_linked_list.c  linked_list.c  quicksort.c  rb_tree.c  xor_linked_list.c
src/asm/: control.c  cpuid.c  io.c  random.c  registers.c
src/cpu/: ap_init.s  control.c  core.c
src/graphics/: framebuffer.c  glyph.c  print.c
src/interrupt/: apic.c  idt.c  pic.c
src/memory/: buddy_allocator.c  manipulate.c  memory_map.c  page_allocator.c  simple_allocator.c
src/paging/: control.c  paging.c
src/ps2/: controller.c  keyboard.c
src/segment/: gdt.c  gdt.s  tss.c
src/sync/: spinlock.c  spinlock.s
